--- a/dos33.html
+++ b/dos33.html
@@ -314,8 +314,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     026             INCLUDE <a class="_c26 file" href="#COREQUS">COREQUS</a>,,1  ; n/a
                     027             INCLUDE <a class="_c27 file" href="#PRENIBL">PRENIBL</a>,,1  ; $3800 .. $3829, T0S2
                     028             INCLUDE <a class="_c28 file" href="#WRITRTN">WRITRTN</a>,,1  ; $382A .. $38C1, T0S2
-                    029             INCLUDE <a class="_c29 file" href="#POSTNRD">POSTNRD</a>,,1  ; $38C2 .. $3???, T0S2 - T0S?
-                    030             INCLDUE <a class="_c30 file" href="#RDADSEK">RDADSEK</a>,,1  ; $3??? .. $39FC, T?S? - T0S3
+                    029             INCLUDE <a class="_c29 file" href="#POSTNRD">POSTNRD</a>,,1  ; $38C2 .. $3943, T0S2 - T0S3
+                    030             INCLDUE <a class="_c30 file" href="#RDADSEK">RDADSEK</a>,,1  ; $3944 .. $39FC, T0S3
                     031             INCLUDE <a class="_c31 file" href="#MSWAITR">MSWAITR</a>,,1  ; $39FD .. $3C55, T0S3 - T0S6
                     032             INCLUDE <a class="_c40 file" href="#WRITADR">WRITADR</a>,,1  ; $3C56 .. $3CFF, T0S6
                     033             INCLUDE <a class="_c41 file" href="#RWTSONE">RWTSONE</a>,,1  ; $3D00 .. $3DAA, T0S7
@@ -5293,7 +5293,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 38C1:60             128             RTS
 
 
-<hr>; === <a class="file" name="POSTNRD">POSTNRD</a> - Post Nibbilize Read, Page <a class="page" name="page101">101</a>, <b class="ts">T0$2</b> @ $C2, $<span class="adr">B8C2</span> .. $<span class="adr">B943</span> ===<hr>
+<hr>; === <a class="file" name="POSTNRD">POSTNRD</a> - Post Nibbilize Read, Page <a class="page" name="page101">101</a>, <b class="ts">T0$2</b> @ $C2 - <b class="ts">T0S3 @ $43, $<span class="adr">B8C2</span> .. $<span class="adr">B943</span> ===<hr>
                     001             SBTL '16-SECTOR POSTNIBLIZE'
                     002 ***************************
                     003 *                         *
@@ -5452,12 +5452,12 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     157 
                     158 
                     159 
-                    160 
-                    161 
-                    162 
-                    163 
-                    164 
-                    165 
+3939:BD 8C C0       160 READ8       LDA Q6L,X
+393C:10 FB          161             BPL READ8       *** NO PAGE CROSS! ***
+393E:C9 AA          162             CMP #$AA        SECOND BIT SLIP MARK?
+3940:F0 5C          163             BEQ RDEXIT      (DONE IF IT IS)
+3942:38             164 RDERR       SEC             INDICATE 'ERROR EXIT'.
+3943:60             165             RTS             FROM READ16 OR RDADR16.
 
 
 <hr>; === <a class="file" name="RDADSEK">RDADSEK</a> - Read Disk Address; Seek, Page <a class="page" name="page106">106</a>, <b class="ts">T0$3</b> @ $44, $<span class="adr">B944</span>-<span class="adr">B9FC</span> ===<hr>
@@ -6976,8 +6976,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
  <span class="c26" href="#COREQUS">COREQUS</span> ; n/a
  <span class="c27" href="#PRENIBL">PRENIBL</span> ; $3800 .. $3829, T0S2
  <span class="c28" href="#WRITRTN">WRITRTN</span> ; $382A .. $38C1, T0S2
- <span class="c29" href="#POSTNRD">POSTNRD</span> ; $38C2 .. $3???, T0S2 - T0S?
- <span class="c30" href="#RDADSEK">RDADSEK</span> ; $3??? .. $39FC, T0S? - T0S3
+ <span class="c29" href="#POSTNRD">POSTNRD</span> ; $38C2 .. $3943, T0S2 - T0S3
+ <span class="c30" href="#RDADSEK">RDADSEK</span> ; $3944 .. $39FC, T0S3
  <span class="c31" href="#MSWAITR">MSWAITR</span> ; $39FD .. $3C55, T0S3 - T0S6
  <span class="c40" href="#WRITADR">WRITADR</span> ; $3C56 .. $3CFF, T0S6
  <span class="c41" href="#RWTSONE">RWTSONE</span> ; $3D00 .. $3DAA, T0S7
@@ -7940,23 +7940,23 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 38A8:<span class="c28">EB 20 B8 38 A9 FF 20 B8</span> |k 88). 8|
 38B0:<span class="c28">38 BD 8E C0 BD 8C C0 60</span> |8=.@=.@`|
 38B8:<span class="c28">18 48 68 9D 8D C0 1D 8C</span> |.Hh..@..|
-38C0:<span class="c28">C0 60</span> <span class="c29">A0 00 A2 56 CA 30</span> |@` ."VJ0|
-38C8:FB B9 00 3B 5E 00 3C 2A |{9.;^.&lt;*|
-38D0:5E 00 3C 2A 91 3E C8 C4 |^.&lt;*.&gt;HD|
-38D8:26 D0 EB 60 A0 20 88 F0 |&amp;Pk`  .p|
-38E0:61 BD 8C C0 10 FB 49 D5 |a=.@.{IU|
-38E8:D0 F4 EA BD 8C C0 10 FB |Ptj=.@.{|
-38F0:C9 AA D0 F2 A0 56 BD 8C |I*Pr V=.|
-38F8:C0 10 FB C9 AD D0 E7 A9 |@.{I-Pg)|
-3900:00 88 84 26 BC 8C C0 10 |...&amp;&lt;.@.| T0S3
-3908:FB 59 00 3A A4 26 99 00 |{Y.:$&amp;..|
-3910:3C D0 EE 84 26 BC 8C C0 |&lt;Pn.&amp;&lt;.@|
-3918:10 FB 59 00 3A A4 26 99 |.{Y.:$&amp;.|
-3920:00 3B C8 D0 EE BC 8C C0 |.;HPn&lt;.@|
-3928:10 FB D9 00 3A D0 13 BD |.{Y.:P.=|
-3930:8C C0 10 FB C9 DE D0 0A |.@.{I^P.|
-3938:EA BD 8C C0 10 FB C9 AA |j=.@.{I*|
-3940:F0 5C 38 60 A0 FC 84 26 |p\8` |.&amp;|
+38C0:<span class="c28">C0 60</span> <span class="c29">A0 00 A2 56 CA 30</span> |@` ."VJ0| POSTNRD, $38C2 .. $3943, T0S2 - T0S3
+38C8:<span class="c29">FB B9 00 3B 5E 00 3C 2A</span> |{9.;^.&lt;*|
+38D0:<span class="c29">5E 00 3C 2A 91 3E C8 C4</span> |^.&lt;*.&gt;HD|
+38D8:<span class="c29">26 D0 EB 60 A0 20 88 F0</span> |&amp;Pk`  .p|
+38E0:<span class="c29">61 BD 8C C0 10 FB 49 D5</span> |a=.@.{IU|
+38E8:<span class="c29">D0 F4 EA BD 8C C0 10 FB</span> |Ptj=.@.{|
+38F0:<span class="c29">C9 AA D0 F2 A0 56 BD 8C</span> |I*Pr V=.|
+38F8:<span class="c29">C0 10 FB C9 AD D0 E7 A9</span> |@.{I-Pg)|
+3900:<span class="c29">00 88 84 26 BC 8C C0 10</span> |...&amp;&lt;.@.| T0S3
+3908:<span class="c29">FB 59 00 3A A4 26 99 00</span> |{Y.:$&amp;..|
+3910:<span class="c29">3C D0 EE 84 26 BC 8C C0</span> |&lt;Pn.&amp;&lt;.@|
+3918:<span class="c29">10 FB 59 00 3A A4 26 99</span> |.{Y.:$&amp;.|
+3920:<span class="c29">00 3B C8 D0 EE BC 8C C0</span> |.;HPn&lt;.@|
+3928:<span class="c29">10 FB D9 00 3A D0 13 BD</span> |.{Y.:P.=|
+3930:<span class="c29">8C C0 10 FB C9 DE D0 0A</span> |.@.{I^P.|
+3938:<span class="c29">EA BD 8C C0 10 FB C9 AA</span> |j=.@.{I*|
+3940:<span class="c29">F0 5C 38 60</span> <span class="c30">A0 FC 84 26</span> |p\8` |.&amp;| RDADSEK, $3944 .. $39FC, T0S3
 3948:C8 D0 04 E6 26 F0 F3 BD |HP.f&amp;ps=|
 3950:8C C0 10 FB C9 D5 D0 F0 |.@.{IUPp|
 3958:EA BD 8C C0 10 FB C9 AA |j=.@.{I*|
