Colorize hex dump for RDADSEK

--- a/dos33.html
+++ b/dos33.html
@@ -7957,29 +7957,29 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3930:<span class="c29">8C C0 10 FB C9 DE D0 0A</span> |.@.{I^P.|
 3938:<span class="c29">EA BD 8C C0 10 FB C9 AA</span> |j=.@.{I*|
 3940:<span class="c29">F0 5C 38 60</span> <span class="c30">A0 FC 84 26</span> |p\8` |.&amp;| RDADSEK, $3944 .. $39FC, T0S3
-3948:C8 D0 04 E6 26 F0 F3 BD |HP.f&amp;ps=|
-3950:8C C0 10 FB C9 D5 D0 F0 |.@.{IUPp|
-3958:EA BD 8C C0 10 FB C9 AA |j=.@.{I*|
-3960:D0 F2 A0 03 BD 8C C0 10 |Pr .=.@.|
-3968:FB C9 96 D0 E7 A9 00 85 |{I.Pg)..|
-3970:27 BD 8C C0 10 FB 2A 85 |'=.@.{*.|
-3978:26 BD 8C C0 10 FB 25 26 |&amp;=.@.{%&amp;|
-3980:99 2C 00 45 27 88 10 E7 |.,.E'..g|
-3988:A8 D0 B7 BD 8C C0 10 FB |(P7=.@.{|
-3990:C9 DE D0 AE EA BD 8C C0 |I^P.j=.@|
-3998:10 FB C9 AA D0 A4 18 60 |.{I*P$.`|
-39A0:86 2B 85 2A CD 78 04 F0 |.+.*Mx.p|
-39A8:53 A9 00 85 26 AD 78 04 |S)..&amp;-x.|
-39B0:85 27 38 E5 2A F0 33 B0 |.'8e*p30|
-39B8:07 49 FF EE 78 04 90 05 |.I.nx...|
-39C0:69 FE CE 78 04 C5 26 90 |i~Nx.E&amp;.|
-39C8:02 A5 26 C9 0C B0 01 A8 |.%&amp;I.0.(|
-39D0:38 20 EE 39 B9 11 3A 20 |8 n99.: |
-39D8:00 3A A5 27 18 20 F1 39 |.:%'. q9|
-39E0:B9 1D 3A 20 00 3A E6 26 |9.: .:f&amp;|
-39E8:D0 C3 20 00 3A 18 AD 78 |PC .:.-x|
-39F0:04 29 03 2A 05 2B AA BD |.).*.+*=|
-39F8:80 C0 A6 2B 60 <span class="c31">00 00 00</span> |.@&amp;+`...| MSWAITR, $39FD .. $3C55, T0S3 - T0S6
+3948:<span class="c30">C8 D0 04 E6 26 F0 F3 BD</span> |HP.f&amp;ps=|
+3950:<span class="c30">8C C0 10 FB C9 D5 D0 F0</span> |.@.{IUPp|
+3958:<span class="c30">EA BD 8C C0 10 FB C9 AA</span> |j=.@.{I*|
+3960:<span class="c30">D0 F2 A0 03 BD 8C C0 10</span> |Pr .=.@.|
+3968:<span class="c30">FB C9 96 D0 E7 A9 00 85</span> |{I.Pg)..|
+3970:<span class="c30">27 BD 8C C0 10 FB 2A 85</span> |'=.@.{*.|
+3978:<span class="c30">26 BD 8C C0 10 FB 25 26</span> |&amp;=.@.{%&amp;|
+3980:<span class="c30">99 2C 00 45 27 88 10 E7</span> |.,.E'..g|
+3988:<span class="c30">A8 D0 B7 BD 8C C0 10 FB</span> |(P7=.@.{|
+3990:<span class="c30">C9 DE D0 AE EA BD 8C C0</span> |I^P.j=.@|
+3998:<span class="c30">10 FB C9 AA D0 A4 18 60</span> |.{I*P$.`|
+39A0:<span class="c30">86 2B 85 2A CD 78 04 F0</span> |.+.*Mx.p|
+39A8:<span class="c30">53 A9 00 85 26 AD 78 04</span> |S)..&amp;-x.|
+39B0:<span class="c30">85 27 38 E5 2A F0 33 B0</span> |.'8e*p30|
+39B8:<span class="c30">07 49 FF EE 78 04 90 05</span> |.I.nx...|
+39C0:<span class="c30">69 FE CE 78 04 C5 26 90</span> |i~Nx.E&amp;.|
+39C8:<span class="c30">02 A5 26 C9 0C B0 01 A8</span> |.%&amp;I.0.(|
+39D0:<span class="c30">38 20 EE 39 B9 11 3A 20</span> |8 n99.: |
+39D8:<span class="c30">00 3A A5 27 18 20 F1 39</span> |.:%'. q9|
+39E0:<span class="c30">B9 1D 3A 20 00 3A E6 26</span> |9.: .:f&amp;|
+39E8:<span class="c30">D0 C3 20 00 3A 18 AD 78</span> |PC .:.-x|
+39F0:<span class="c30">04 29 03 2A 05 2B AA BD</span> |.).*.+*=|
+39F8:<span class="c30">80 C0 A6 2B 60</span> <span class="c31">00 00 00</span> |.@&amp;+`...| MSWAITR, $39FD .. $3C55, T0S3 - T0S6
 3A00:<span class="c31">A2 11 CA D0 FD E6 46 D0</span> |".JP}fFP| T0S4
 3A08:<span class="c31">02 E6 47 38 E9 01 D0 F0</span> |.fG8i.Pp|
 3A10:<span class="c31">60 01 30 28 24 20 1E 1D</span> |`.0($ ..|
