Add T/S to hex dump

--- a/dos33.html
+++ b/dos33.html
@@ -6988,7 +6988,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 
 <pre>
-1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"|
+1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| T0SA
 1B08:<span class="c00">00 86 40 A0 00 A1 40 85</span> |..@ .!@.|
 1B10:<span class="c00">26 98 45 26 85 26 98 41</span> |&amp;.E&amp;.&amp;.A|
 1B18:<span class="c00">40 81 40 C5 26 D0 05 C8</span> |@.@E&amp;P.H|
@@ -7020,7 +7020,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1BE8:<span class="c00">41 AE 9C 33 DD 5D 1C 90</span> |A..3]]..|
 1BF0:<span class="c00">CD A5 40 DD 5C 1C 90 C6</span> |M%@]\..F|
 1BF8:<span class="c00">8A 18 69 04 AA EC 59 1C</span> |..i.*lY.|
-1C00:<span class="c00">90 AF A9 3F 85 41 AC 7D</span> |./)?.A,}|
+1C00:<span class="c00">90 AF A9 3F 85 41 AC 7D</span> |./)?.A,}| T0SB
 1C08:<span class="c00">1C 88 84 43 A9 00 85 40</span> |...C)..@|
 1C10:<span class="c00">85 42 A8 B1 40 91 42 C8</span> |.B(1@.BH|
 1C18:<span class="c00">D0 F9 CE 80 1C F0 06 C6</span> |PyN..p.F|
@@ -7052,7 +7052,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1CE8:<span class="c00">FD FC FF FD FC FF FC FC</span> |}|.}|.|||
 1CF0:<span class="c00">FE FD FC FC FD FC FE FC</span> |~}||}|~||
 1CF8:<span class="c00">FC FD FF FC FC FD FC FC</span> ||}.||}|||
-1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*|
+1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*| T0SC
 1D08:<span class="c01">93 2A 60 2A 00 1B BB 35</span> |.*`*..;5|
 1D10:<span class="c01">EA 1E 11 1F 22 1F 2E 1F</span> |j..."...|
 1D18:<span class="c01">51 1F 60 1F 70 1F 4E 25</span> |Q.`.p.N%|
@@ -7084,7 +7084,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1DE8:<span class="c01">5C 1D 0A 10 19 8D B6 2A</span> |\.....6*|
 1DF0:<span class="c01">A2 0C BD 77 1D 9D 55 1D</span> |".=w..U.|
 1DF8:<span class="c01">CA D0 F7 A2 1D BD 93 2A</span> |JPw".=.*|
-1E00:<span class="c01">9D 75 2A CA 10 F7 AD B1</span> |.u*J.w-1|
+1E00:<span class="c01">9D 75 2A CA 10 F7 AD B1</span> |.u*J.w-1| T0SD
 1E08:<span class="c01">2A 8D 57 2A 20 D4 27 AD</span> |*.W* T'-|
 1E10:<span class="c01">B3 2A F0 09 48 20 9D 26</span> |3*p.H .&amp;|
 1E18:<span class="c01">68 A0 00 91 40 20 5B 27</span> |h ..@ ['|
@@ -7116,7 +7116,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1EE8:10 F8 60 AE B7 2A F0 03 |.x`.7*p.|
 1EF0:4C 78 1F AE 51 2A F0 08 |Lx..Q*p.|
 1EF8:C9 BF F0 75 C5 33 F0 27 |I?puE3p'|
-1F00:A2 02 8E 52 2A CD B2 2A |"..R*M2*|
+1F00:A2 02 8E 52 2A CD B2 2A |"..R*M2*| T0SE
 1F08:D0 19 CA 8E 52 2A CA 8E |P.J.R*J.|
 1F10:5D 2A AE 5D 2A 9D 00 02 |]*.]*...|
 1F18:E8 8E 5D 2A C9 8D D0 75 |h.]*I.Pu|
@@ -7148,7 +7148,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1FE8:20 A4 21 29 7F 59 84 28 | $!).Y.(|
 1FF0:C8 0A F0 02 68 08 90 F0 |H.p.h..p|
 1FF8:28 F0 20 B9 84 28 D0 D6 |(p 9.(PV|
-2000:AD 00 02 CD B2 2A F0 03 |-..M2*p.|
+2000:AD 00 02 CD B2 2A F0 03 |-..M2*p.| T0SF
 2008:4C A4 1F AD 01 02 C9 8D |L$.-..I.|
 2010:D0 06 20 5B 27 4C 95 1F |P. ['L..|
 2018:4C C4 26 0E 5F 2A AC 5F |LD&amp;._*,_|
@@ -7180,7 +7180,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 20E8:20 A4 21 D0 1F C9 8D D0 | $!P.I.P|
 20F0:F7 AE 5F 2A AD 65 2A 1D |w._*-e*.|
 20F8:0A 29 5D 0A 29 D0 93 AE |.)].)P..|
-2100:63 2A F0 76 8D 63 2A 8E |c*pv.c*.|
+2100:63 2A F0 76 8D 63 2A 8E |c*pv.c*.| T1S0
 2108:5D 2A D0 DC A2 0A DD 40 |]*P\".]@|
 2110:29 F0 05 CA D0 F8 F0 B6 |)p.JPxp6|
 2118:BD 4A 29 30 47 0D 65 2A |=J)0G.e*|
@@ -7212,7 +7212,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 21E8:45 A8 20 FE 21 20 FE 21 |E( ~! ~!|
 21F0:8A 65 44 85 44 98 65 45 |.eD.D.eE|
 21F8:85 45 90 CF 38 60 06 44 |.E.O8`.D|
-2200:26 45 60 28 20 A4 21 F0 |&amp;E`( $!p|
+2200:26 45 60 28 20 A4 21 F0 |&amp;E`( $!p| T1S1
 2208:C5 38 E9 B0 30 EE C9 0A |E8i00nI.|
 2210:90 08 E9 07 30 E6 C9 10 |..i.0fI.|
 2218:B0 E2 A2 04 20 FE 21 CA |0b". ~!J|
@@ -7244,7 +7244,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 22E8:A8 26 AD 75 2A C9 A0 F0 |(&amp;-u*I p|
 22F0:25 20 64 27 B0 3A 20 FC |% d'0: ||
 22F8:22 4C EA 22 20 AF 27 D0 |"Lj" /'P|
-2300:05 A9 00 8D B3 2A A0 00 |.)..3* .|
+2300:05 A9 00 8D B3 2A A0 00 |.)..3* .| T1S2
 2308:98 91 40 20 4E 27 A9 02 |..@ N').|
 2310:8D BB 35 4C A8 26 20 92 |.;5L(&amp; .|
 2318:27 D0 05 20 9A 27 F0 10 |'P. .'p.|
@@ -7276,7 +7276,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 23E8:35 A9 04 8D BB 35 A9 01 |5)..;5).|
 23F0:8D BC 35 20 A8 26 AD C2 |.&lt;5 (&amp;-B|
 23F8:35 8D C3 35 4C A8 26 8C |5.C5L(&amp;.|
-2400:C3 35 8D C4 35 A9 02 4C |C5.D5).L|
+2400:C3 35 8D C4 35 A9 02 4C |C5.D5).L| T1S3
 2408:86 36 20 A8 26 4C EA 22 |.6 (&amp;Lj"|
 2410:4C D0 26 20 16 23 20 A8 |LP&amp; .# (|
 2418:22 A9 23 2D C2 35 F0 F0 |")#-B5pp|
@@ -7308,7 +7308,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 24E8:CC A5 4B 85 CD 6C 56 1D |L%K.MlV.|
 24F0:20 16 24 20 C8 1F 20 51 | .$ H. Q|
 24F8:28 6C 56 1D 20 65 D6 85 |(lV. eV.|
-2500:33 85 D8 4C D2 D7 20 65 |3.XLRW e|
+2500:33 85 D8 4C D2 D7 20 65 |3.XLRW e| T1S4
 2508:0E 85 33 85 D8 4C D4 0F |..3.XLT.|
 2510:20 26 25 A9 05 8D 52 2A | &amp;%)..R*|
 2518:4C 83 1F 20 26 25 A9 01 |L.. &amp;%).|
@@ -7340,7 +7340,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 25E8:20 4E 27 AD 65 2A 29 04 | N'-e*).|
 25F0:F0 1B AD 6E 2A D0 08 AE |p.-n*P..|
 25F8:6F 2A F0 11 CE 6F 2A CE |o*p.No*N|
-2600:6E 2A 20 8C 26 F0 38 C9 |n* .&amp;p8I|
+2600:6E 2A 20 8C 26 F0 38 C9 |n* .&amp;p8I| T1S5
 2608:8D D0 F7 F0 E5 60 20 5E |.Pwpe` ^|
 2610:26 B0 66 AD 5C 2A 8D C3 |&amp;0f-\*.C|
 2618:35 A9 04 8D BB 35 A9 01 |5)..;5).|
@@ -7372,7 +7372,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 26E8:2A 20 02 27 20 C8 1F 20 |* .' H. |
 26F0:51 28 20 5E 26 AE 5C 2A |Q( ^&amp;.\*|
 26F8:A9 03 B0 03 6C 5A 1D 6C |).0.lZ.l|
-2700:5E 1D BD 3F 2A AA 8E 63 |^.=?**.c|
+2700:5E 1D BD 3F 2A AA 8E 63 |^.=?**.c| T1S6
 2708:2A BD 71 29 48 09 80 20 |*=q)H.. |
 2710:C5 1F AE 63 2A E8 68 10 |E..c*hh.|
 2718:ED 60 AD 66 2A 8D BF 35 |m`-f*.?5|
@@ -7404,7 +7404,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 27E8:91 40 A0 1E 38 A5 40 E9 |.@ .8%@i|
 27F0:2D 91 40 48 A5 41 E9 00 |-.@H%Ai.|
 27F8:C8 91 40 AA CA 68 48 C8 |H.@*JhHH|
-2800:91 40 8A C8 91 40 AA CA |.@.H.@*J|
+2800:91 40 8A C8 91 40 AA CA |.@.H.@*J| T1S7
 2808:68 48 C8 91 40 C8 8A 91 |hHH.@H..|
 2810:40 CE 63 2A F0 17 AA 68 |@Nc*p.*h|
 2818:38 E9 26 C8 91 40 48 8A |8i&amp;H.@H.|
@@ -7420,7 +7420,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2868:85 39 A5 37 CD 05 1D F0 |.9%7M..p|
 2870:12 8D 54 2A A5 36 8D 53 |..T*%6.S|
 2878:2A AD 04 1D 85 36 AD 05 |*-...6-.|
-2880:1D 85 37 60 49 4E 49 D4 |..7`INIT|
+2880:1D 85 37 60 49 4E 49 D4 |..7`INIT| CMDTBLS, $2884 .. ?
 2888:4C 4F 41 C4 53 41 56 C5 |LOADSAVE|
 2890:52 55 CE 43 48 41 49 CE |RUNCHAIN|
 2898:44 45 4C 45 54 C5 4C 4F |DELETELO|
@@ -7436,7 +7436,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 28E8:41 58 46 49 4C 45 D3 46 |AXFILESF|
 28F0:D0 49 4E D4 42 53 41 56 |PINTBSAV|
 28F8:C5 42 4C 4F 41 C4 42 52 |EBLOADBR|
-2900:55 CE 56 45 52 49 46 D9 |UNVERIFY|
+2900:55 CE 56 45 52 49 46 D9 |UNVERIFY| T1S8
 2908:00 21 70 A0 70 A1 70 A0 |.!p p!p |
 2910:70 20 70 20 70 20 70 20 |p p p p |
 2918:70 60 00 22 06 20 74 22 |p`.". t"|
@@ -7468,7 +7468,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 29E8:C4 53 59 4E 54 41 58 20 |DSYNTAX |
 29F0:45 52 52 4F D2 4E 4F 20 |ERRORNO |
 29F8:42 55 46 46 45 52 53 20 |BUFFERS |
-2A00:41 56 41 49 4C 41 42 4C |AVAILABL|
+2A00:41 56 41 49 4C 41 42 4C |AVAILABL| T1S9
 2A08:C5 46 49 4C 45 20 54 59 |EFILE TY|
 2A10:50 45 20 4D 49 53 4D 41 |PE MISMA|
 2A18:54 43 C8 50 52 4F 47 52 |TCHPROGR|
@@ -7500,7 +7500,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2AE8:2C 95 2C 86 2C 92 2C 7E |,.,.,.,~|
 2AF0:33 7E 33 BD 2C C9 2C BA |3~3=,I,:|
 2AF8:2C C6 2C 7E 33 E0 00 F0 |,F,~3`.p|
-2B00:02 A2 02 8E 5F 2A BA 8E |.".._*:.|
+2B00:02 A2 02 8E 5F 2A BA 8E |.".._*:.| T1SA
 2B08:9B 33 20 6A 2E AD BB 35 |.3 j.-;5|
 2B10:C9 0D B0 0B 0A AA BD CA |I.0..*=J|
 2B18:2A 48 BD C9 2A 48 60 4C |*H=I*H`L|
@@ -7532,7 +7532,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2BE8:BF 35 49 FF 8D F9 35 AD |?5I..y5-|
 2BF0:C0 35 8D F8 35 AD C1 35 |@5.x5-A5|
 2BF8:0A 0A 0A 0A AA 8E F7 35 |....*.w5|
-2C00:A9 11 8D FA 35 60 20 1D |)..z5` .|
+2C00:A9 11 8D FA 35 60 20 1D |)..z5` .| T1SB
 2C08:2F 20 34 2F 20 C3 32 A9 |/ 4/ C2)|
 2C10:02 2D D5 35 F0 21 20 F7 |.-U5p! w|
 2C18:2F A9 00 18 20 11 30 38 |/).. .08|
@@ -7564,7 +7564,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2CE8:35 20 5B 31 4C 94 31 A9 |5 [1L.1)|
 2CF0:80 8D 9E 33 D0 05 A9 00 |...3P.).|
 2CF8:8D 9E 33 20 28 2B AE 9C |..3 (+..|
-2D00:33 BD C8 34 29 7F 0D 9E |3=H4)...|
+2D00:33 BD C8 34 29 7F 0D 9E |3=H4)...| T1SC
 2D08:33 9D C8 34 20 37 30 4C |3.H4 70L|
 2D10:7F 33 20 00 33 4C 7F 33 |.3 .3L.3|
 2D18:20 28 2B 20 B6 30 B0 EF | (+ 600o|
@@ -7596,7 +7596,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2DE8:BD C8 34 29 7F A0 07 0A |=H4). ..|
 2DF0:0A B0 03 88 D0 FA B9 A7 |.0..Pz9'|
 2DF8:33 20 ED FD A9 A0 20 ED |3 m})  m|
-2E00:FD BD E7 34 85 44 BD E8 |}=g4.D=h|
+2E00:FD BD E7 34 85 44 BD E8 |}=g4.D=h| T1SD
 2E08:34 85 45 20 42 2E A9 A0 |4.E B.) |
 2E10:20 ED FD E8 E8 E8 A0 1D | m}hhh .|
 2E18:BD C6 34 20 ED FD E8 88 |=F4 m}h.|
@@ -7628,7 +7628,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2EE8:8C BD 34 C8 8C ED 37 A9 |.=4H.m7)|
 2EF0:02 20 58 30 AC BD 34 88 |. X0,=4.|
 2EF8:30 05 D0 EC 98 F0 E6 20 |0.Pl.pf |
-2F00:C2 37 20 4A 37 4C 7F 33 |B7 J7L.3|
+2F00:C2 37 20 4A 37 4C 7F 33 |B7 J7L.3| T1SE
 2F08:A2 00 F0 06 A2 02 D0 02 |".p.".P.|
 2F10:A2 04 BD C7 35 85 42 BD |".=G5.B=|
 2F18:C8 35 85 43 60 2C D5 35 |H5.C`,U5|
@@ -7660,7 +7660,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2FE8:CC 35 8C F0 37 8D F1 37 |L5.p7.q7|
 2FF0:AE D6 35 AC D7 35 60 A9 |.V5,W5`)|
 2FF8:<span class="c22">01 D0 02 A9 02 AC C3 2A</span> |.P.).,C*|
-3000:<span class="c22">8C F0 37 AC C4 2A 8C F1</span> |.p7,D*.q|
+3000:<span class="c22">8C F0 37 AC C4 2A 8C F1</span> |.p7,D*.q| T1SF
 3008:<span class="c22">37 AE FA 35 A0 00 4C 52</span> |7.z5 .LR|
 3010:<span class="c22">30 08 20 45 30 28 B0 08</span> |0. E0(0.|
 3018:<span class="c22">AC BD 33 AE BC 33 D0 0A</span> |,=3.&lt;3P.|
@@ -7692,7 +7692,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 30E8:<span class="c22">CD DE 35 90 06 20 5E 2F</span> |M^5.. ^/|
 30F0:<span class="c22">90 D7 60 38 AD E4 35 ED</span> |.W`8-d5m|
 30F8:<span class="c22">DC 35 0A 69 0C A8 20 0C</span> |\5.i.( .|
-3100:<span class="c22">2F B1 42 D0 0F AD BB 35</span> |/1BP.-;5|
+3100:<span class="c22">2F B1 42 D0 0F AD BB 35</span> |/1BP.-;5| T2S0
 3108:<span class="c22">C9 04 F0 02 38 60 20 34</span> |I.p.8` 4|
 3110:<span class="c22">31 4C 20 31 8D D6 35 C8</span> |1L 1.V5H|
 3118:<span class="c22">B1 42 8D D7 35 20 DC 2F</span> |1B.W5 \/|
@@ -7724,7 +7724,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 31E8:<span class="c23">51 A2 00 8E 9C 33 BD C6</span> |Q"...3=F|
 31F0:<span class="c23">34 F0 1F 30 22 A0 00 E8</span> |4p.0" .h|
 31F8:<span class="c23">E8 E8 B1 42 DD C6 34 D0</span> |hh1B]F4P|
-3200:<span class="c23">0A C8 C0 1E D0 F3 AE 9C</span> |.H@.Ps..|
+3200:<span class="c23">0A C8 C0 1E D0 F3 AE 9C</span> |.H@.Ps..| T2S1
 3208:<span class="c23">33 18 60 20 30 32 90 DB</span> |3.` 02.[|
 3210:<span class="c23">B0 CF AC 9D 33 D0 C1 AC</span> |0O,.3PA,|
 3218:<span class="c23">9D 33 D0 EF A0 00 E8 E8</span> |.3Po .hh|
@@ -7756,7 +7756,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 32E8:<span class="c23">33 D0 F2 0A 0A A8 F0 0F</span> |3Pr..(p.|
 32F0:<span class="c23">A2 04 BD F1 35 19 F6 33</span> |".=q5.v3|
 32F8:<span class="c23">99 F6 33 88 CA D0 F3 60</span> |.v3.JPs`|
-3300:<span class="c23">AD BD 35 8D E6 35 8D EA</span> |-=5.f5.j|
+3300:<span class="c23">AD BD 35 8D E6 35 8D EA</span> |-=5.f5.j| T2S2
 3308:<span class="c23">35 AD BE 35 8D E4 35 8D</span> |5-&gt;5.d5.|
 3310:<span class="c23">EB 35 A9 00 8D E5 35 A0</span> |k5)..e5 |
 3318:<span class="c23">10 AA AD E6 35 4A B0 03</span> |.*-f5J0.|
@@ -7788,7 +7788,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 33E8:<span class="c24">FE FF FC 11 01 00 00 23</span> |~.|....#|
 33F0:<span class="c24">10 00 01 FF FC FC FD FC</span> |....||}||
 33F8:<span class="c24">FE FC FC FD FD FE FC FC</span> |~||}}~|||
-3400:<span class="c24">FF FC FC FD FC FD FD FC</span> |.||}|}}||
+3400:<span class="c24">FF FC FC FD FC FD FD FC</span> |.||}|}}|| T2S3
 3408:<span class="c24">FF FE FC FC FC FC FE FE</span> |.~||||~~|
 3410:<span class="c24">FC FD FC FC FC FE FC FD</span> ||}|||~|}|
 3418:<span class="c24">FC FC FE FC FC FC FE FC</span> |||~|||~||
@@ -7811,7 +7811,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 34A0:<span class="c24">FE FC FC FC FC FC FE FC</span> |~|||||~||
 34A8:<span class="c24">FD FD FC FF FD FC FE FE</span> |}}|.}|~~|
 34B0:<span class="c24">FC FD FD FE FF FD FE FF</span> ||}}~.}~.|
-34B8:<span class="c24">FE FF FC 02 FC FD FC FC</span> |~.|.|}|||
+34B8:<span class="c24">FE FF FC 02 FC FD FC FC</span> |~.|.|}||| &lt;-- entire sector wasted for 1 byte!
 34C0:<span class="c24">FC FE FE FE FD FE FF FE</span> ||~~~}~.~|
 34C8:<span class="c24">FC FC FC FC FC FE FC FD</span> ||||||~|}|
 34D0:<span class="c24">FC FC FF FD FC FE FC FC</span> |||.}|~|||
@@ -7820,7 +7820,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 34E8:<span class="c24">FE FF FF FD FC FE FF FC</span> |~..}|~.||
 34F0:<span class="c24">FE FD FE FC FE FC FF FE</span> |~}~|~|.~|
 34F8:<span class="c24">FE FE FC FD FD FE FF FC</span> |~~|}}~.||
-3500:<span class="c24">FC FC FC FC FC FE FC FD</span> ||||||~|}|
+3500:<span class="c24">FC FC FC FC FC FE FC FD</span> ||||||~|}| T2S4
 3508:<span class="c24">FD FC FF FD FC FE FE FC</span> |}|.}|~~||
 3510:<span class="c24">FE FD FC FF FF FC FC FE</span> |~}|..||~|
 3518:<span class="c24">FE FD FE FD FE FE FC FC</span> |~}~}~~|||
