Add file names to B00 .. E81 of hex dump

--- a/dos33.html
+++ b/dos33.html
@@ -6988,7 +6988,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 
 <pre>
-1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| T0SA
+1B00:<span class="c00">4C 84 1D A9 BF 85 41 A2</span> |L..)?.A"| RELOCTR, $1B00 .. $1CFF, T0SA - T0SB
 1B08:<span class="c00">00 86 40 A0 00 A1 40 85</span> |..@ .!@.|
 1B10:<span class="c00">26 98 45 26 85 26 98 41</span> |&amp;.E&amp;.&amp;.A|
 1B18:<span class="c00">40 81 40 C5 26 D0 05 C8</span> |@.@E&amp;P.H|
@@ -7052,7 +7052,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1CE8:<span class="c00">FD FC FF FD FC FF FC FC</span> |}|.}|.|||
 1CF0:<span class="c00">FE FD FC FC FD FC FE FC</span> |~}||}|~||
 1CF8:<span class="c00">FC FD FF FC FC FD FC FC</span> ||}.||}|||
-1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*| T0SC
+1D00:<span class="c01">D3 1C 81 1E BD 1E 75 2A</span> |S...=.u*| DOSINIT, $1D00 .. $1E80, T0SC - T0SD
 1D08:<span class="c01">93 2A 60 2A 00 1B BB 35</span> |.*`*..;5|
 1D10:<span class="c01">EA 1E 11 1F 22 1F 2E 1F</span> |j..."...|
 1D18:<span class="c01">51 1F 60 1F 70 1F 4E 25</span> |Q.`.p.N%|
@@ -7100,7 +7100,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1E68:<span class="c01">C1 2A 60 4C 51 28 EA EA</span> |A*`LQ(jj|
 1E70:<span class="c01">4C 59 FA 4C 65 FF 4C 58</span> |LYzLe.LX|
 1E78:<span class="c01">FF 4C 65 FF 4C 65 FF 65</span> |.Le.Le.e|
-1E80:<span class="c01">FF</span> <span class="c02">20 D1 1E AD 51 2A F0</span> |. Q.-Q*p|
+1E80:<span class="c01">FF</span> <span class="c02">20 D1 1E AD 51 2A F0</span> |. Q.-Q*p| DOSHOOK, $1E81 - ?
 1E88:<span class="c02">15 48 AD 5C 2A 91 28 68</span> |.H-\*.(h|
 1E90:<span class="c02">30 03 4C 26 26 20 EA 1D</span> |0.L&amp;&amp; j.|
 1E98:A4 24 A9 60 91 28 AD B3 |$$)`.(-3|
